# rustos

./: .gitignore  Cargo.toml  linker.ld  makefile
.cargo/: config.toml
src/: gdt.rs  interrupt.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
src/bootloader/: bootloader.asm  stage1.asm
tests/: basic_boot.rs  stack_overflow.rs
